# ChangeLog for games-simulation/flightgear
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/flightgear/ChangeLog,v 1.74 2015/01/11 13:57:39 reavertm Exp $

  11 Jan 2015; Maciej Mrozowski <reavertm@gentoo.org> flightgear-3.2.0.ebuild:
  Add missing speex/gsm dependencies.

*flightgear-3.2.0 (11 Jan 2015)

  11 Jan 2015; Maciej Mrozowski <reavertm@gentoo.org> +flightgear-3.2.0.ebuild:
  Version bump.

*flightgear-3.0.0-r1 (11 Sep 2014)

  11 Sep 2014; Maciej Mrozowski <reavertm@gentoo.org> +files/ac3d.vim,
  +files/nasal.vim, +flightgear-3.0.0-r1.ebuild:
  Install examples, misc scripts and vim syntax, bug 520434.

  12 Aug 2014; Maciej Mrozowski <reavertm@gentoo.org>
  -files/flightgear-2.8.0-fgpanel-linking.patch, -flightgear-2.10.0.ebuild,
  -flightgear-2.12.1.ebuild, -flightgear-2.8.0.ebuild, metadata.xml:
  Removed versions affected by bug 468106. Dropping to ~ppc.

  07 Jun 2014; Agostino Sarubbo <ago@gentoo.org> flightgear-3.0.0.ebuild:
  Stable for x86, wrt bug #505912

  09 May 2014; Chema Alonso <nimiux@gentoo.org> flightgear-3.0.0.ebuild:
  Stable for amd64 wrt bug #505912

*flightgear-3.0.0 (27 Mar 2014)

  27 Mar 2014; Maciej Mrozowski <reavertm@gentoo.org> +flightgear-3.0.0.ebuild,
  metadata.xml:
  Version bump, bug 502246.

*flightgear-2.12.1 (12 Dec 2013)

  12 Dec 2013; Maciej Mrozowski <reavertm@gentoo.org> +flightgear-2.12.1.ebuild,
  -flightgear-2.12.0.ebuild:
  Version bump, remove old.

  07 Dec 2013; Pacho Ramos <pacho@gentoo.org> flightgear-2.10.0.ebuild:
  x86 stable, bug #488552

  24 Nov 2013; Pacho Ramos <pacho@gentoo.org> flightgear-2.10.0.ebuild:
  amd64 stable, bug #488552

*flightgear-2.12.0 (23 Nov 2013)

  23 Nov 2013; Maciej Mrozowski <reavertm@gentoo.org> +flightgear-2.12.0.ebuild,
  metadata.xml:
  Version bump, bug 485932

*flightgear-2.10.0 (20 Feb 2013)

  20 Feb 2013; Maciej Mrozowski <reavertm@gentoo.org> +flightgear-2.10.0.ebuild,