@@ -5,15 +5,17 @@ AUX ac3d.vim 45 SHA256 fce013503a5a902f19909baf9848387c7ef6ec253bd32eb86613838bc
 AUX nasal.vim 47 SHA256 57ceefdda4970e6f347c0df2aefddd36c15522781e4a2d28ba9f8a249b72a28b SHA512 1edfa24fabbaae5037c8c521052d7013f3b29d2933d79a8381593121115229df6764219614d8d06b4058eb93cf84d9cc75773fd0864fd7a6e2aebd811e9d1afb WHIRLPOOL 10558327431b1818c6e366ee074bd0ef37ebfbddd4abf17783825fe1ec8877b88dc518f58d95fc545ef0403e50d294fb93dd87bc7b6b5fcfd5383e76ad3fadaf
 DIST flightgear-3.0.0.tar.bz2 5874662 SHA256 e4bf1922825920a404539e6611c36eb5567b85d46a726fd8c6f9b19c138ba6e9 SHA512 6de5dc742af485a2fd86cf538dca10b7bc085f11667daf17dfa55f488a9c64f9de2e79952592c3b9ec77109409b04b1425afba2769ccfaaf76b9c268d5d934ab WHIRLPOOL 319b8de80d459ca15007125350fc79865502b0faf6624eacbbec9a5c1618c70032c608e4bd55139f106774ec48b346454047edb4702c253acefd85df7dcf5af3
 DIST flightgear-3.2.0.tar.bz2 6950249 SHA256 addac512375b9f800a77e5733c7c0e4214442ed61a0b2712abedc0a506ac5f12 SHA512 46da91fc02137cf86a58a0824f4144f11ab015bb292f30d9549d3b2eae98483d83786a3a22859003ca910dab2165ae6d95408e644367eaccdc8d5197e0c155f4 WHIRLPOOL cdb1f0e65ac8c7e438294978cfe441100fd59cc9aef6a3302feeec5d742cba0080c30d8dcc25dbbf6cf727598f1a77a4b6c269887e1ba91273d39273459dc840
-EBUILD flightgear-3.0.0-r1.ebuild 3414 SHA256 d0e5fdb55eedf454cda1b8c8161754d28dbe8d3008a782a351d4f080c2b523e7 SHA512 abdf3077e5ac5490d7664b6d0b041db60c73ce2f216e70ef0147dcf4c35be43790e3bf744b6d334368748f8731678adda76fc3cbd137bb4f6667ff7c407f2f30 WHIRLPOOL 4f78da98988d3da4b6b685767fbf41033e1518b7fcc047d0ee42e30081472f6641e80e93f7de8e3426e6fe1d79db231e9d9b1866ecfe75fb08ae148b2b14b456
-EBUILD flightgear-3.0.0.ebuild 2493 SHA256 acf72d530c900009ba7de3e86edc198f262b354e9a75c81b085f08e5fce51fcc SHA512 26e3050aeecb54737824fddfa38f580a7185b3ddc2e57ed59bb4e35e14cdff9031481fc4abb4e08bba53d85c76ba25e3ec2e56ea45a5ee562a3ab7ae2e30639c WHIRLPOOL 2827523f5b10339c6114e338e84cd0cfaa5c2d9358b668e2d15d7762a5f30259b6cf657c17ba29c562518677f5b27fdf2fc17222b61a9141bf52794febb7d04d
-EBUILD flightgear-3.2.0.ebuild 3374 SHA256 d40d575bdc29390aa55516455b55cf9b601b1e718fbe17d1b257b86f179b8666 SHA512 23463a93708bf235a1a11b81e7c662efe741c83df7f23e0391de2c08b8ebe4c9581734f9000fd5b026e54896261ff1426cbf902c40a16f4ba64fbc0f22616dcb WHIRLPOOL 1cf338ff1fec4f3a5d67af268d8ca4639a71305a45dbd436bc87dc8c7e9b4986901c07363af8c1bb6bf79e2eb1586d06c15c3e80eead023246384744694522c0
-MISC ChangeLog 12679 SHA256 1227a7bb59458a3c7b5863fff2d5bbbbfb63e29945e5ba2b1afb1a51c81a264d SHA512 5ddb08f12548ff61c6fe45fe9233c316bebace9838fdde22815e19729d0212ce51ad043b1a3137f042ae910961c0dc44005939a7c2ddcbb162d59198c421a279 WHIRLPOOL 0dc5769ba94c833ba2554231a647bc7bc4423602b4d30b15be03937686ab279a17126c0e9cddcef64e95b1e19f5095c16d80b03686637409663182c509e97d78
-MISC metadata.xml 739 SHA256 073aa1b4e6317d094517faed1a6fe26713ecf7c585757897e5cb11695f0fe094 SHA512 8a741ece4ccd91f2518e47c321fc2acd13065f05c63dc64a1d74f1753b67caa66bfd208822b0ba1a408204eafdc231535d224d65876dc29ed44572bc4b10204f WHIRLPOOL 0e3a6f2516860c1c60d10ab8cd32a9274cad5e991f198dc090f88114a621fa14d7f3e91974dced76f2fa546664c225bf96abd8048fd8200bf2d40af070a6737a
+DIST flightgear-3.4.0.tar.bz2 7522457 SHA256 b5645d05b50728a89f091292bc557f440d8f8719dd9cebf7f5bf3fa8ea795780 SHA512 10626d00b34255753dc5a5c82076909c296219472faf51c38460cc357ac014b40bd127454f28b2d857f1a1a299716430fd8f04dc7881552b3c24dee6eb616b1e WHIRLPOOL 636ca7e012175141bc4b081cb6137e5348d49b873d241c5d0f1ed0a2581b32d2f23f4fe0ed97d5a1b72440afd14687e5de4e6ebeeaf07b4e854b0ca47875b82f
+EBUILD flightgear-3.0.0-r1.ebuild 3416 SHA256 77228d119aeeadfa2ad0990f6b2b86a2b1c250a440944053ca302827e1762ec3 SHA512 a78f85f7e610892fe3d83949965fb94ed4df9d5662175ce26d568162aaeea8c548394bf95f9c701087c8fea35264bcb5819edd1c78d899d176ad99860c7e9b76 WHIRLPOOL 787b57b813ada4ff1a569d67f1e4c1e395b3285a67545d3839af2d5f72b98dad1e8f8b9716cc5c79216893c3335fc11135002ed2fb755d663eb152b0d952ef5b
+EBUILD flightgear-3.0.0.ebuild 2500 SHA256 717f90c9a47dd7d9dfaeb2d914b3a0899fcbef341189eb471f538bcfbcc8ddde SHA512 180845fe2b9e120b78e447c09e49bf159882cf09e8d3163fb26e5f11ef588b30c082d54f038f4f4d20471f57b23fb5f85d999412af6ed883f4abf64d7d5c9924 WHIRLPOOL 6325ac991a09429597a96901c7234241141471b7634594cd93b70d24cb46e70976d0934b60394236d112b8c7cfd5e26715d7fcdc58b2b9163981421b41b92e85
+EBUILD flightgear-3.2.0.ebuild 3376 SHA256 a4348a8eb2e10ff5f4a4b8c89b3271aa6bdd8ac614e41f46145823a5a3445d94 SHA512 2a9e8ddc551cf4445a6d63566d8901d621c17621b6107d2424cad74e99687f651e20a1c33d911ab93450dede48430c7b1cd01a2701a59b97bceb6250f5d0f95d WHIRLPOOL 116195505e2fd46d71d179a40b45e947eaba64005af625fe2bbf93de730c402845ad895ba09e5c0214daad41b2f1be0e1042177c2796a9572d3100cce5f960c6
+EBUILD flightgear-3.4.0.ebuild 3554 SHA256 1d63340025628b69902f1245754e0fa689d4bec99861e8bacd33b060a267ccc9 SHA512 5727e87cae3caf0d012f79e915e7ee3e64ec9e04179c1037982f98324d02c5af8b098784c460cc445f3e71e1bca0bfb406c4fe5548f6805ddb362fe8d1ceae6a WHIRLPOOL 6ca3054bf2f49bdbcb8cd23adace7bfb8b5dd4ab205336ae93755371a93106e6be9d2422b275b7eefdbea9a22901996698d3662bc07b13e74637b429acf09c11
+MISC ChangeLog 12905 SHA256 4dd5f80c3c3240b59aba0c75a1996170f849239e2f6692dcbb11553b0686dd0e SHA512 5fc67a9c2e39a7d01d0eb5f00372baf2a9d7878b0be65683d4b7d29fc447230bdd5006c1010b63ebc4a26b650e0b25780101d0f5f78e120bc62a44eca74f0656 WHIRLPOOL 313b895e37c1bbce8b15467f09e5f169decb28c0e22b4dea6a3660a261d509eb84d20eb20e09d276d8268dd3a6b9d7c634e0b23edbcd7e082da1e04ee1e8e07a
+MISC metadata.xml 796 SHA256 8f00f19484a0621bd9f5dc190e6d881ab6d5392b4d7a678693a32058db34950c SHA512 43f5ee767c67a938a0962ffde52d9afa96dab87870df21ab5bea1c38f6eda2538dd209dd14eb88961a5c2a7adf91d891567fa6e3ff8971e6e73c855f77e0c693 WHIRLPOOL 5612e92ae24749b68b3de3b200fddd9959540b8ed65c65e285d69701f0bb875d3f597350fbcd5cd16af3ae694528341fecb969940272914535da7a38e2d0f977
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlSygW8ACgkQFuHa/bHpVdsShQCdFG1RXSHqk8Cu/kUZXDLyDZp5
-TX4An1u4Ez8mFAhPXnqPSO+7BjjvE7Ou
-=A7Iq
+iEYEAREIAAYFAlTtGAMACgkQFuHa/bHpVdvOIQCgyV62ldvKVt+ZYLoo99888XiI
+P4MAnRIh0G6yLjn+3JeYfVeLhpZVgAIZ
+=5Jpg
 -----END PGP SIGNATURE-----
