@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/flightgear/flightgear-3.2.0.ebuild,v 1.2 2015/01/11 13:57:39 reavertm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/flightgear/flightgear-3.2.0.ebuild,v 1.3 2015/02/25 00:31:34 reavertm Exp $
 
 EAPI=5
 
@@ -28,7 +28,7 @@ COMMON_DEPEND="
 	udev? ( virtual/udev )
 	utils? (
 		media-libs/freeglut
-		media-libs/libpng
+		media-libs/libpng:0
 		virtual/opengl
 	)
 "
