@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare setup test unpack
-DEPEND=dev-db/sqlite:3 >=dev-games/openscenegraph-3.0.1[png] ~dev-games/simgear-3.0.0[jpeg?] media-libs/openal sys-libs/zlib x11-libs/libX11 dbus? ( >=sys-apps/dbus-1.6.18-r1 ) udev? ( virtual/udev ) utils? ( media-libs/freeglut media-libs/libpng virtual/opengl ) >=dev-libs/boost-1.44 >=media-libs/plib-1.8.5 jpeg? ( virtual/jpeg ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=dev-db/sqlite:3 >=dev-games/openscenegraph-3.0.1[png] ~dev-games/simgear-3.0.0[jpeg?] media-libs/openal sys-libs/zlib x11-libs/libX11 dbus? ( >=sys-apps/dbus-1.6.18-r1 ) udev? ( virtual/udev ) utils? ( media-libs/freeglut media-libs/libpng:0 virtual/opengl ) >=dev-libs/boost-1.44 >=media-libs/plib-1.8.5 jpeg? ( virtual/jpeg ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=Open Source Flight Simulator
 EAPI=5
 HOMEPAGE=http://www.flightgear.org/
 IUSE=dbus debug jpeg +jsbsim oldfdm test +udev +utils +yasim
 KEYWORDS=amd64 ~ppc x86
 LICENSE=GPL-2
-RDEPEND=dev-db/sqlite:3 >=dev-games/openscenegraph-3.0.1[png] ~dev-games/simgear-3.0.0[jpeg?] media-libs/openal sys-libs/zlib x11-libs/libX11 dbus? ( >=sys-apps/dbus-1.6.18-r1 ) udev? ( virtual/udev ) utils? ( media-libs/freeglut media-libs/libpng virtual/opengl ) ~games-simulation/flightgear-data-3.0.0 games-misc/games-envd
+RDEPEND=dev-db/sqlite:3 >=dev-games/openscenegraph-3.0.1[png] ~dev-games/simgear-3.0.0[jpeg?] media-libs/openal sys-libs/zlib x11-libs/libX11 dbus? ( >=sys-apps/dbus-1.6.18-r1 ) udev? ( virtual/udev ) utils? ( media-libs/freeglut media-libs/libpng:0 virtual/opengl ) ~games-simulation/flightgear-data-3.0.0 games-misc/games-envd
 SLOT=0
 SRC_URI=mirror://flightgear/Source/flightgear-3.0.0.tar.bz2
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	998e5931fb95b10a6a11ec796ada2759	flag-o-matic	c263990f1b677b0f0be0a3299f179762	games	1ad3205dbf62a2c98249f2f59b0a2d39	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747
-_md5_=e850c5634eba6b2a0dc254a11d3708cc
+_md5_=501700caf1bcee706c5466f9c6920b73
