@@ -1,6 +1,13 @@
 # ChangeLog for games-simulation/flightgear
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/flightgear/ChangeLog,v 1.74 2015/01/11 13:57:39 reavertm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/flightgear/ChangeLog,v 1.75 2015/02/25 00:31:34 reavertm Exp $
+
+*flightgear-3.4.0 (25 Feb 2015)
+
+  25 Feb 2015; Maciej Mrozowski <reavertm@gentoo.org> +flightgear-3.4.0.ebuild,
+  flightgear-3.0.0-r1.ebuild, flightgear-3.0.0.ebuild, flightgear-3.2.0.ebuild,
+  metadata.xml:
+  Version bump.
 
   11 Jan 2015; Maciej Mrozowski <reavertm@gentoo.org> flightgear-3.2.0.ebuild:
   Add missing speex/gsm dependencies.
